--- a/polipriv_ptbr.html
+++ b/polipriv_ptbr.html
@@ -39,6 +39,9 @@
 <p><strong>Links para outros sites</strong></p>
 <p>Este Serviço pode conter links para outros sites. Se você clicar em um link de terceiros, você será direcionado a esse site. Observe que esses sites externos não são operados por nós. Portanto, recomendamos fortemente que você reveja a Política de Privacidade desses sites. Não temos controle e não assumimos responsabilidade pelo conteúdo, políticas de privacidade ou práticas de quaisquer sites ou serviços de terceiros.</p>
 
+<p><strong>Youtube</strong></p>
+<p>Informamos que este app utiliza serviços do Youtube, estes fornecidos através da API livre do mesmo(https://developers.google.com/youtube/v3), Youtube Android API(https://developers.google.com/youtube/android/player?hl=pt-br) e acesso ao mesmo via Browser contido no app, a política de privacidade do Youtube pode ser consultada através do link(https://policies.google.com/privacy?hl=pt-BR&gl=br). Gostaríamos de ressaltar que não temos afiliação nenhuma com o Youtube.com e não somos mantidos pelo mesmo ou nenhuma de suas subsidiárias. A seção "Youtube" deste app é um cliente terceirizado não oficial com habilidades de personalização pessoal. Conforme os Termos de Serviço do Youtube você não poderá:<br> - Reproduzir vídeos em segundo plano do Youtube<br>- Baixar videos do Youtube</p>
+
 <p><strong>Privacidade Infantil</strong></p>
 <p>Este aplicativo não é direcionado a ninguém com idade inferior a 13 anos. Se você for um pai ou responsável e não concordar com esta política de privacidade, você pode simplesmente desinstalar o aplicativo MuviCast Player do dispositivo e todos os dados armazenados serão completamente apagados.</p>
 
